--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "transpile": "babel src --out-dir dist",
     "start": "node ./dist/index.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
+    "ServerES6toJS5": "babel ./src/services/server.es6.js --out-dir dist",
+    "ServerTStoJS5": "node_modules/.bin/tsc",
     "migrate:db": ".\\node_modules\\.bin\\knex migrate:latest --env development",
     "rollback:db": ".\\node_modules\\.bin\\knex migrate:rollback --env development",
     "seed:db": ".\\node_modules\\.bin\\knex seed:run --env development",
@@ -21,7 +23,10 @@
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.8",
-    "nodemon": "^2.0.12"
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "express": "^4.17.1",
